--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,14 +1,14 @@
-/* src/styles/fonts.css erstellen */
+/* src/styles/fonts.css */
 @font-face {
   font-family: 'SF Pro Display';
-  src: url('/fonts/SF-Pro-Display-Medium.woff2') format('woff2');
+  src: url('/fonts/SFPRODISPLAYMEDIUM.OTF') format('opentype');
   font-weight: 500;
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Inter';
-  src: url('/fonts/Inter-Regular.woff2') format('woff2');
+  src: url('/fonts/SFPRODISPLAYREGULAR.OTF') format('opentype');
   font-weight: 400;
   font-display: swap;
 }
